Fixed: Text align center

--- a/site-sass/site-specific/site.header.scss
+++ b/site-sass/site-specific/site.header.scss
@@ -85,7 +85,6 @@ header {
 	width: auto;
 	line-height: 21px;
 	@include mq($until:tablet) {
-		text-align: center;
 		margin: 0;
 	}
 }
